<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="105dp"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button7"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:text="@string/seven"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="0"
            app:layout_gravity="fill"
            app:layout_row="0" />

        <Button
            android:id="@+id/button4"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:text="@string/four"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button1"
            android:text="@string/one"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonClear"
            android:text="@string/clear"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:background="@android:color/black"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:fontFamily="sans-serif-black"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            android:background="@android:color/darker_gray"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonTimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:background="@android:color/darker_gray"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:background="@android:color/darker_gray"
            android:fontFamily="sans-serif-black"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            app:layout_column="3"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/Display"
        android:layout_width="0dp"
        android:layout_height="105dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="end"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
